# raytracing

./: README.md
basic_engine/: main.cpp
basic_engine/cam/: camera.hpp
basic_engine/hit/: hittable.hpp  material.hpp
basic_engine/test/: CMakeLists.txt
basic_engine/vec3/: CMakeLists.txt  common_func.hpp  interval.hpp  vec3.cpp
basic_scene/: .gitignore  CMakeLists.txt  basic.md  color.hpp  image.ppm  img.ppm  init.sh  main.cpp  ray.hpp
basic_scene/test/: test_vec3.cpp
basic_scene/vec3/: vec3.hpp
creating_ppm/: CMakeLists.txt  gradient.md  init.sh  main.cpp
raycast/: main.cpp
raycast/cam/: camera.hpp
raycast/hit/: CMakeLists.txt  hittable.hpp  hittable_list.hpp
raycast/test/: CMakeLists.txt
raycast/vec3/: CMakeLists.txt  common_func.hpp  interval.hpp  ray.hpp  vec3.hpp
src/: CMakeLists.txt
src/cam/: CMakeLists.txt
src/hit/: CMakeLists.txt  hittable.cpp
src/vec3/: color.hpp  interval.cpp  ray.hpp  vec3.hpp
test/: test_vec3.cpp
